# Master-All-Strings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: verify.yml
docs/architecture/: ENGINE_CONTRACT_OWNERSHIP.md  ENGINE_DEPENDENCY_MATRIX.md  ENGINE_OWNERSHIP_REGISTRY.md  FOUR_ENGINE_SYSTEM_MODEL.md  MUSICAL_SPATIAL_MAPPING_ENGINE.md  PRODUCT_CHARTER.md  SYSTEM_BOUNDARIES.md
docs/decisions/: ADR-0001-REPOSITORY-OWNERSHIP.md  ADR-0002-CORE-DATACLASSES.md  ADR-0003-MUSIC-CANONICAL.md  ADR-0004-CANDIDATE-GENERATION.md  ADR-0006-FOUR-ENGINE-ARCHITECTURE.md
docs/development/: CONTINUOUS_VERIFICATION.md
docs/handoff/: DO-005-FOUR-ENGINE-ARCHITECTURE-RATIFICATION.md  HANDOFF-2026-07-21-EDUCATIONAL-PLATFORM-SMART-NOTATION.md  HANDOFF-2026-07-21-UNREACHABLE-ZERO-INVARIANT.md
docs/legacy-lineage/: README.md
docs/planning/: FOUR_ENGINE_HANDOFF_DECOMPOSITION.md
governance/: engine_architecture_v1.json
resources/instruments/examples/: bass-fretless-4.json  guitar-standard-6.json  mandolin-standard.json  violin-standard.json
resources/instruments/schema/: instrument_profile.schema.json
schemas/: engine_architecture_v1.schema.json
scripts/: check_engine_boundaries.py
src/master_all_strings/: __init__.py
src/master_all_strings/adapters/: __init__.py
src/master_all_strings/core/: __init__.py  foundation.py
src/master_all_strings/governance/: __init__.py  engine_boundaries.py
src/master_all_strings/instruments/: __init__.py  models.py
src/master_all_strings/practice/: __init__.py
src/master_all_strings/sequencer/: __init__.py
tests/: test_import_surface.py
tests/core/: test_contract_hardening_gaps.py  test_foundation_and_invariants.py  test_geometry.py  test_musical_events.py  test_pitch.py  test_spatial_mapping_models.py
tests/core/spatial_mapping/: test_candidate_builders.py  (+2 more)
tests/golden/: msme_v1_vectors.json  msme_v1_vectors.schema.json  test_msme_v1_vectors.py
tests/governance/: test_engine_architecture_schema.py  test_engine_boundaries.py  test_engine_markdown_views.py
tests/instruments/: test_profiles.py
(+12 files in other folders)
