[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-all-strings"
version = "0.1.0"
description = "Modern musical sequencing and spatial-mapping foundation derived from Master Producer lineage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ross Echols" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "jsonschema>=4",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["master_all_strings"]

[tool.coverage.report]
# Repository-wide floor. Lives here, not in the CI command, so a local
# `pytest --cov` enforces the same policy the workflow does. Repository sits at
# ~98%; 95% keeps a meaningful gate with room for justified defensive branches.
fail_under = 95

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_configs = true
